fix(styles): update advert card background color; enhance z-index for improved layering

--- a/Pawesome/Views/User/Profile.cshtml.css
+++ b/Pawesome/Views/User/Profile.cshtml.css
@@ -166,14 +166,14 @@
 }
 
 .advert-card {
-    background-color: var(--color-primary-1);
+    background-color: var(--color-primary-2);
     border-radius: var(--radius-xl);
     border: 1px solid var(--color-primary-4);
-    overflow: hidden;
     transition: var(--transition);
     height: 100%;
     display: flex;
     flex-direction: column;
+    z-index: 10;
 }
 
 .advert-card:hover {
